2007-07-23  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Yeti <yeti@physics.muni.cz>

	* gtk-doc.make:
	* gtkdoc-mkdb.in:
	  Report undeclared symbols into a file. Fixes #436565.

2007-07-18  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Readd two debug prints and remove one obsolete one.

	* tests/bugs/Makefile.am:
	* tests/gobject/Makefile.am:
	  Enforce 'make clean' before 'make check'.

2007-07-18  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Yeti <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in:
	  Cleanup broek-return handling and add ignore_broken_returns for
	  section docs. Fixes #457077

	* tests/bugs/docs/Makefile.in:
	* tests/gobject/docs/Makefile.in:
	  Remove.

	* tests/gtk-doc.make:
	  Use the local tools so that 'make check' works uninstalled.
	  

2007-07-18  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c: (bug_419997):
	* tests/bugs/src/tester.h:
	* tests/gobject/src/tester.c: (gtkdoc_tester_class_init):
	* tests/gobject/src/tester.h:
	  Add more test cases.

2007-07-17  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/Makefile.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c: (bug_141869_a), (bug_141869_b),
	(bug_379466), (bug_445693):
	* tests/bugs/src/tester.h:
	* tests/gtk-doc.make:
	* tests/gtkdoctest.sh:
	  Improve test suite.

2007-07-17  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Yeti <yeti@physics.muni.cz>

	* gtkdoc-common.pl.in:
	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	* gtkdoc-scan.in:
	  Improve paramenter parsing to allow parameter names that contain
	  const or restricted. Fixes #419997
	  Also fix the signed/unsigned more.

2007-07-17  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* tests/Makefile.am:
	* tests/bugs.sh:
	* tests/bugs/Makefile.am:
	* tests/bugs/docs/Makefile.am:
	* tests/bugs/docs/Makefile.in:
	* tests/bugs/docs/tester-docs.sgml:
	* tests/bugs/docs/tester-sections.txt: