@@ -1,3 +1,9 @@
+2007-07-25  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-mkdb.in:
+	* gtkdoc-scan.in:
+	  Some more debug prints and code cleaning.
+
 2007-07-23  Stefan Kost  <ensonic@users.sf.net>
 
 	Patch by: Yeti <yeti@physics.muni.cz>
